started profile page

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /website/nbproject/private/
 /waystoneWebsite/nbproject/private/
+/EmployeeLogin/nbproject/private/
+/EmployeeLogin/build/
+/BDTesting/nbproject/private/
