employee can edit database info

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /EmployeeLogin/nbproject/private/
 /EmployeeLogin/build/
 /BDTesting/nbproject/private/
+/testJS/nbproject/private/
+/LoginDeletedPage/nbproject/private/
