--- a/EmployeeLogin/web/WEB-INF/web.xml
+++ b/EmployeeLogin/web/WEB-INF/web.xml
@@ -22,4 +22,18 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    
+    <error-page>
+    	<exception-type>javax.faces.application.ViewExpiredException</exception-type>
+    	<location>/index.xhtml</location>
+    </error-page>
+    
+    <filter>
+    	<filter-name>AuthorizationFilter</filter-name>
+    	<filter-class>waystonepropertymanagement.employee.login.AuthorizationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+    	<filter-name>AuthorizationFilter</filter-name>
+    	<url-pattern>*.xhtml</url-pattern>
+    </filter-mapping>
 </web-app>
