--- a/EmployeeLogin/.classpath
+++ b/EmployeeLogin/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.datatools.connectivity.jdt.DRIVERLIBRARY/Other Driver Default"/>
 	<classpathentry kind="lib" path="C:/Users/Katie/JavaxFacesAPI/javax.faces-2.2.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Katie/SendGrid/sendgrid-java-latest.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
